# oxide_ircd

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/helpers/: logging.rs  mod.rs
src/ircd/: channel.rs  client.rs  command.rs  ircd.rs  mod.rs  response.rs
