[package]
name = "oxide_ircd"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tokio = { version = "1", features = ["full", "tracing"] }
serde = {version = "1", features = ["derive"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"]}
config = "0.14"
secrecy = { version = "0.8", features = ["serde"] }
rust-analyzer = "0.0.1"
uuid = { version = "0.8", features = ["v4"] }
rand = "0.8.3"